# pokeapi-fastapi

./: Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: initial_migration.py
app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  services.py
app/middleware/: validation.py
app/routers/: admin.py  pokemon.py
scripts/: create_tables.py  migrate_database.py
